# eznbtemplater

./: README.md  pyproject.toml
eznbtemplater/: eznbtemplater.py
pkg/: pkg.py
pkg/templates/: calculation_note.ipynb
tests/: test_template.py
