[project]
name = "nbtemplate"
version = "0.1.0"
description = "Generate PDF and Jupyter Notebook files from a Notebook template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "tabulate>=0.9.0",
]
